Fix spelling error and smarter display